# AI-BOTS-FOR-NEPAL

./: .env.example  .gitignore  README.md  docker-compose.yml  extractor.py  main.py
app/: extractor.py  main.py  query.py  scraper.py
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: __init__.py  chat.py  health.py  ingest.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/db/: models.py  session.py
apps/api/app/services/: __init__.py  chat.py  scraper.py
apps/api/app/vector/: __init__.py  qdrant_client.py  schema.py
apps/web/: .dockerignore  Dockerfile  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
data/structured_text/gokarneshwor/: %E0%A4%B5%E0%A4%BF%E0%A4%B7%E0%A4%AF%E0%A4%97%E0%A4%A4%20%E0%A4%B8%E0%A4%AE%E0%A4%BF%E0%A4%A4%E0%A5%80%E0%A4%B9%E0%A4%B0%E0%A5%81_0.json  %E0%A5%A9%E0%A5%A8.json  %E0%A5%A9%E0%A5%AA_0.json  Contacts_2022-05-23_%E0%A4%9C%E0%A4%A8%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%A4%E0%A4%BF%E0%A4%A8%E0%A4%BF%E0%A4%A7%E0%A4%BF%20%E0%A5%A8%E0%A5%A6%E0%A5%AD%E0%A5%AF_0.json  Gokarneshwor%20niti%20book%20all%202082%20web%20final_0.json
docs/architecture/: directory-structure.md
docs/database/: postgres-schema.md  vector-schema.md
infra/postgres/init/: 001_schema.sql
infra/qdrant/: schema.md
