[project]
name = "gov-chatbot-api"
version = "0.1.0"
description = "FastAPI backend for a multi-tenant government website chatbot SaaS."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "qdrant-client>=1.13.0",
  "fastembed>=0.4.2",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "pymupdf4llm>=0.0.17",
  "playwright>=1.46.0",
  "langchain>=0.2.14",
  "langchain-text-splitters>=0.2.2",
  "langchain-openai>=0.1.22",
  "langchain-google-genai>=1.0.10",
  "rank-bm25>=0.2.2",
  "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2",
  "mypy>=1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
